Fix header, logo img and nav spacing.

--- a/resources/style.css
+++ b/resources/style.css
@@ -7,49 +7,48 @@ html {
   text-align: center;
 }
 
-div {
-  display: block;
-}
-
 .header {
   position: fixed;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  width: 100%;
+  background-color: black;
   border-bottom: 1px solid seashell;
   height: 69px;
-  width: 100%;
-  padding: 10px 10px;
-  margin: 0;
-  background-color: black;
+  top: 0px;
   align-items: center;
   z-index: 1;
 }
 
-.header.logo img {
+.logo img {
+  display: flex;
   height: 50px;
+  padding: 10px 10px;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0;
 }
 
-.header nav {
-  display: inline-block;
+.nav {
   font-family: Helvetica;
   font-size: 22px;
-  color: seashell;
-  text-align: right;
-  flex-grow: 1;
-}
-
-.header span {
-    padding: 20px 10px;
-    text-decoration: underline;
+  display: inline-flex;
+  margin-left: auto;
+  padding-right: 10px;
 }
 
 .header a {
+  padding: 10px 10px;
   color: seashell;
+  text-decoration: underline;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: flex-end;
+  text-align: right;
 }
 
-.content {
-  margin: auto;
+.content-container {
   padding-top: 70px;
 }
 
